Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17048

Galera 4: Inconsistency voting

    XMLWordPrintable

Details

    Description

      Galera Cluster version 3, has strict inconsistency policy: all transaction replication errors cause emergency abort for all nodes detecting the inconsistency.

      Galera Cluster 4 has more sophisticated inconsistency strategy where cluster runs inconsistency voting protocol and optimizes the way cluster reacts to detected inconsistency. With consistency voting, Galera Cluster can mitigate the harm of inconsistency for the cluster. In the best case, only one node has to abort, and majority can continue operating normally However, if the database has been inconsistent, for indefinitely long period, and application business logic may have been hurt

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.