sql/wsrep_binlog.cc
@@ -417,7 +417,9 @@ void wsrep_register_for_group_commit(THD *thd)
 
 void wsrep_unregister_from_group_commit(THD *thd)
 {
-  DBUG_ASSERT(thd->wsrep_trx().state() == wsrep::transaction::s_ordered_commit);
+  DBUG_ASSERT(thd->wsrep_trx().state() == wsrep::transaction::s_ordered_commit||
+              // ordered_commit() failure results in s_aborting state
+              thd->wsrep_trx().state() == wsrep::transaction::s_aborting);
   wait_for_commit *wfc= thd->wait_for_commit_ptr;
 
   if (wfc)
